[package]

name = "hpack"
version = "0.0.1"
authors = ["Marko Lalic <marko.lalic@gmail.com>"]

[features]

# A feature defining some interop tests between the HPACK decoder and
# headers encoded by other libraries. It is only ever used in test builds!
interop_tests = ["rustc-serialize"]

[dependencies]
log = "^0.2"

[dependencies.rustc-serialize]
version = "^0.3"
optional = true
